--- a/index.html
+++ b/index.html
@@ -1,53 +1,50 @@
  <!DOCTYPE html> 
 
  <html>
+
 	<head> 
 		<title>Leann Hourdel's profile</title>
 		<meta name="description" content="this is the profile of Leann">
 		<meta charset="utf-8">
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
-			<script src="https://kit.fontawesome.com/c1cdb7e277.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css2?family=Lora&family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="style.css">
+		<script src="https://kit.fontawesome.com/c1cdb7e277.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
 		<div class="container"> 
 			<div class="box-white"id="introduction">
-				 <h1>
-				 	<p class="text-centered">Hello I'm Leann !!</p> 
-				 </h1>
+				<h1>Hello, I'm Leann Hourdel</h1>
+				<img src="images/profile.png" class="img-circle" width="100px" alt="Leann Hourdel" >
 
-				 	<p class="text-centered">
-						<img src="images/profile-picture.png" alt="Leann Hourdel" class="img-circle">
+					<p> 
+						Hi I am Leann and this is my first time coding :) I am passionnate about art, sports and learning. That is why I'm so excited to learn how to code : I have always been interested to know how to do it, how websites really works and how to create one.
 					</p>
 
-					<p class="text-justify"> 
-						Hi I am Leann and this is the first time i am coding :) I am passionnate about art, sports and learning. One of my passion is actually singing, i have been singing since I was 6 so I love it. Moreover, I also love drawing, but you will learn more about this later.
-					</p>
-
-					<p class="text-justify"></p> 
-					<a href="https://lewagon.com" target="_blank" class="btn-blue">Discover the Wagon</a>
+				<a href="https://lewagon.com" target="_blank" class="btn-blue">Learn how to code!</a>
 			</div>
+
 			<div class="box-white">
 				<h2>Art</h2>
 					<p>
-					I love art.
+					I love art. I have been doing some since I can hold a pencil. I love every aspect of it: music, sculpture, drawing, photography, film, litterature... I do and love each one of them
 					</p>
 			</div>
+
 			<div class="box-white">
 				<h2>Sports</h2>
 					<p>
-					I love doing sports.
+					I love sports. I find every single one attractive because I did a lot of different sports when I was young: tennis, baseball, handball, football, vollayball, gymnastics, horse-riding... I wasn't the greatest in each but I loved playing them.
 					</p>
 			</div>
+
 			<div class="box-white">
 				<h2>Learning</h2>
 					<p>
-					I love learning.
+					I love learning. This could sound weird, but the process of learning new things every day makes me enjoy a lot more school. As sports, I am not the greatest in every course, but I try my best to do the maximum I can do in each.
 					</p>
 			</div>
+
 			<div class="box-white">
 				<h2>Follow me</h2>
 
@@ -57,11 +54,13 @@
 			  			<i class="fa-brands fa-square-facebook"></i>
 			  		</a>
 			  	</li>
+
 			  	<li>
 			  		<a href="https://www.instagram.com/leannnhrd/" target="_blank">
 			  			<i class="fa-brands fa-square-instagram"></i>
 			  		</a>
 			  	</li>
+
 			  	<li>
 			  		<a href="https://twitter.com/leannhourdel" target="_blank">
 			  			<i class="fa-brands fa-square-twitter"></i>
@@ -70,5 +69,6 @@
 			  </ul>
 			</div>
 		</div>
+
 	</body>
  </html> 
